fixed lib issue

--- a/Barcodegenerator/Views/Home/Index.cshtml
+++ b/Barcodegenerator/Views/Home/Index.cshtml
@@ -6,14 +6,14 @@
     <h1 class="display-4">Welcome</h1>
 
     <form method="post" >
-        <label>TagName For Barcode</label> <input type="text" name="BarcodeValue" placeholder="54321" minlength="13" required />
+        <label>TagName For Barcode</label> <input type="text" name="BarcodeValue" placeholder="54321" minlength="12" required />
         <input type="submit" value="Genrate Barcode">
     </form>
     <div>
         <p>Barcode Image is here</p>
-        <img src="data:image/png;base64,@ViewBag.BaseImage" alt="Red dot" />
+        <img src="@ViewBag.BaseImage" alt="Red dot" />
         <br>
-        @*<label>@ViewBag.CodeValue</label>*@
+        <label>@ViewBag.CodeValue</label>
     </div>
 
 </div>
